Added basic start command to the application. Still a lot of work to do...

--- a/MadWorldStudios.DIscordBot.ASM/appsettings.json
+++ b/MadWorldStudios.DIscordBot.ASM/appsettings.json
@@ -7,6 +7,16 @@
     "**/obj",
     "**/platforms"
   ],
-  "discord_token": "replace_me_with_your_key" //This should match your bot key provided by discord. Remember to keep this private!
+  "discord_token": "replace_me_with_your_key", //This should match your bot key provided by discord. Remember to keep this private!
   //for more info: https://github.com/reactiflux/discord-irc/wiki/Creating-a-discord-bot-&-getting-a-token
+  "Servers": [
+    {
+      "Name": "Ohma",
+      "StartCommand": "D:\\Servers\\Server3\\ShooterGame\\Saved\\Config\\WindowsServer\\RunServer.cmd"
+    },
+    {
+      "Name": "Ohma_Abberation",
+      "StartCommand": "D:\\Servers\\Server6\\ShooterGame\\Saved\\Config\\WindowsServer\\RunServer.cmd"
+    }
+  ]
 }
