Basic starting and stopping of servers added.

--- a/MadWorldStudios.DIscordBot.ASM/appsettings.json
+++ b/MadWorldStudios.DIscordBot.ASM/appsettings.json
@@ -12,11 +12,18 @@
   "Servers": [
     {
       "Name": "Ohma",
+      "ShortName": "Ohma",
       "StartCommand": "D:\\Servers\\Server3\\ShooterGame\\Saved\\Config\\WindowsServer\\RunServer.cmd"
     },
     {
-      "Name": "Ohma_Abberation",
+      "Name": "Ohma - Abberation",
+      "ShortName": "Ohma_Abberation",
       "StartCommand": "D:\\Servers\\Server6\\ShooterGame\\Saved\\Config\\WindowsServer\\RunServer.cmd"
+    },
+    {
+      "Name": "Lone Wolf - Extinction",
+      "ShortName": "LoneWolf_Extinction",
+      "StartCommand": "G:\\Games\\ASM\\servers\\Server2\\ShooterGame\\Saved\\Config\\WindowsServer\\RunServer.cmd"
     }
   ]
 }
